- Use infill=false on transparent textures
- Add Player.Cuts to video OSD
- Add Favourites browser support
- Add support for Dolby Vision, HDR10 and HLG codec flagging
- Update screen calibration window
- Update home submenu icons
- Add support for color button
- Add color picker dialog
- Add game controllers port dialog
- Add support for RetroPlayer savestate manager

[B]Version 1.3.6[/B]
- Fix album and song information window play button
- Fix numeric dialog
- Switch to bigger keyboard dialog

[B]Version 1.3.5[/B]
- Recode video calibration window
- Bugfixes

[B]Version 1.3.4[/B]
- Add "Movie set information" label to video information dialog
- Bugfix video codec flagging
- Add spin controls to Favourites and File Browser dialogs

[B]Version 1.3.3[/B]
- Startup animation also works when using splash screen

[B]Version 1.3.2[/B]
- Add startup animation

[B]Version 1.3.1[/B]
- Add skin setting to blur fanart backgrounds

[B]Version 1.3.0[/B]
- Add gaming support

[B]Version 1.2.7[/B]
- Add skin setting to use splash screen

[B]Version 1.2.6[/B]
- Fix List view label2
- Fix select dialog focus issue

[B]Version 1.2.5[/B]
- Fix languages

[B]Version 1.2.4[/B]
- Widget updates and fixes

[B]Version 1.2.3[/B]
- Add RDS support

[B]Version 1.2.2[/B]
- Fix widget labels
- Add Player.Chapters and Player.CutList to seekbar OSD
- Add cache to progress bar OSD
- Add slider control to video and music OSD
- Remove slider control from DialogSeekBar.xml

[B]Version 1.2.1[/B]
- Fix select dialog buttons and labels
- Fix TetradUI logo position in Login screen

[B]Version 1.2.0[/B]
- Add PVR support

[B]Version 1.1.11[/B]
- Add add-on shortcuts for Applications window

[B]Version 1.1.10[/B]
- Add ListItem.AddonLifecycleType / ListItem.AddonLifecycleDesc
- Fixes for information window animations

[B]Version 1.1.9[/B]
- Add Russian translation (thanks to vansai)

[B]Version 1.1.8[/B]
- Fix sub blade backgrounds

[B]Version 1.1.7[/B]
- Cleanup backgrounds