@@ -10,6 +10,8 @@
 - Add color picker dialog
 - Add game controllers port dialog
 - Add support for RetroPlayer savestate manager
+- Add scene markers to video OSD
+- PVR channel manager dialog will fade inactive channels
 
 [B]Version 1.3.6[/B]
 - Fix album and song information window play button
